<resources>
    <string name="app_name">Tibia Compendium</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Navigation -->
    <string name="title_home">Home</string>
    <string name="title_items">Items</string>
    <string name="title_search_char">Character Search</string>
    <string name="title_search_guild">Guild Search</string>

    <string-array name="navigation_sections">
        <item>@string/title_home</item>
        <item>@string/title_items</item>
        <item>@string/title_search_char</item>
        <item>@string/title_search_guild</item>
    </string-array>

    <string name="action_settings">Settings</string>
    <string name="action_sort">Sort</string>
    <string name="sort_rank">By Rank</string>
    <string name="sort_level">By Level</string>
    <string name="sort_name">By Name</string>
    <string name="sort_vocation">By Vocation</string>
    <string name="sort_joined">By Join Date</string>

    <!-- Character fragment -->
    <string name="name">Name</string>
    <string name="deletion">Scheduled for deletion on %1$s</string>
    <string name="warning">Character has a warning.</string>
    <string name="char_summary">Level %1$d %2$s</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="residence">Residence</string>
    <string name="char_residence">%1$s in %2$s</string>
    <string name="char_house">%1$s in %2$s</string>
    <string name="search_hint_player">Character name</string>
    <string name="search">Search</string>
    <string name="achievements">Achievement Points</string>
    <string name="former_names">Former Names</string>
    <string name="guild">Guild</string>
    <string name="guildcontent">%1$s of the %2$s</string>
    <string name="house">House</string>
    <string name="former_world">Former World</string>
    <string name="last_login">Last Login</string>
    <string name="comment">Comment</string>
    <string name="no_results_char">Character does not exist.</string>
    <string name="deaths">Deaths</string>
    <string name="death_details">%1$s at Level %2$d by %3$s</string>
    <string name="other_chars">Other characters</string>

    <!-- Guild fragment -->
    <string name="search_hint_guild">Guild name</string>
    <string name="no_results_guild">No guild found.</string>
    <string name="member_title">(%1$s)</string>
    <string name="guild_info">Founded on %1$s on %2$s.</string>
    <string name="guild_logo">Guild logo</string>

    <plurals name="guild_member_count">
        <item quantity="zero">The guild has no members.</item>
        <item quantity="one">The guild has %d member.</item>
        <item quantity="other">The guild has %d members.</item>
    </plurals>

    <plurals name="guild_members_online">
        <item quantity="zero">There are no members online.</item>
        <item quantity="one">There is %d member online.</item>
        <item quantity="other">There are %d members online.</item>
    </plurals>

    <!-- Misc -->
    <string name="expand_collapse">Expand/Collapse</string>
    <string name="online">Online</string>
    <string name="network_error">Network error. Check your internet connection.</string>
    <string name="no_network_error">No connection available. Check your device\'s network settings.</string>
    <string name="search_hint_item">Item name</string>
    <string name="helmets">Helmets</string>
    <string name="dropped_by">Dropped by</string>
    <string name="bought_by">Bought by</string>
    <string name="sold_by">Sold by</string>
    <string name="chance">%1$.2f%%</string>
    <string name="city">(%1$s)</string>
    <string name="price">%1$,d</string>
</resources>
