<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:title="@string/action_sort"
        android:id="@+id/menu_sort"
        android:icon="@drawable/menu_sort"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/by_rank"
                android:title="@string/sort_rank"/>
            <item
                android:id="@+id/by_name"
                android:title="@string/sort_name"/>
            <item
                android:id="@+id/by_level"
                android:title="@string/sort_level"/>
            <item
                android:id="@+id/by_vocation"
                android:title="@string/sort_vocation"/>
            <item
                android:id="@+id/by_joined"
                android:title="@string/sort_joined"/>
        </menu>
    </item>
</menu>