<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity$HomeFragment"
    android:orientation="vertical">
    <Button
        android:id="@+id/button_items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textColor="@color/white"
        android:theme="@style/RaisedButton"
        android:text="@string/title_items"/>
    <Button
        android:id="@+id/button_character"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textColor="@color/white"
        android:theme="@style/RaisedButton"
        android:text="@string/title_search_char"/>

    <Button
        android:id="@+id/button_guild"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textColor="@color/white"
        android:theme="@style/RaisedButton"
        android:text="@string/title_search_guild"/>

</LinearLayout>
