<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">
    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        app:layout_constraintGuide_begin="5dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="5dp" />
    <ImageView
        android:id="@+id/warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_warning"
        android:tint="@color/red"
        android:visibility="gone"
        tools:visibility="visible"
        android:contentDescription="@string/warning"
        app:layout_constraintBottom_toBottomOf="@+id/name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/name" />
    <TextView
        android:id="@+id/name"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:gravity="center_vertical"
        tools:text="Name"
        style="@style/BigTitleText"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_male"
        android:contentDescription="@string/male"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/name" />
    <TextView
        android:id="@+id/summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/EntryText"
        tools:text="Level 123 Vocation"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintLeft_toLeftOf="@+id/guideline" />
    <TextView
        android:id="@+id/achievements"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="20"
        style="@style/EntryText"
        app:layout_constraintRight_toLeftOf="@+id/icon_achievements"
        app:layout_constraintBaseline_toBaselineOf="@+id/summary" />
    <ImageView
        android:id="@+id/icon_achievements"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:src="@drawable/ic_achievements"
        android:contentDescription="@string/achievements"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/achievements"
        app:layout_constraintBottom_toBottomOf="@id/achievements"/>
    <TextView
        android:id="@+id/residence_title"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/residence"
        style="@style/TitleText"
        app:layout_constraintTop_toBottomOf="@+id/summary"
        app:layout_constraintLeft_toLeftOf="@+id/guideline" />
    <TextView
        android:id="@+id/residence"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        tools:text="City in World"
        style="@style/EntryText"
        app:layout_constraintTop_toBottomOf="@+id/residence_title"
        app:layout_constraintLeft_toLeftOf="@+id/guideline" />
    <TextView
        android:id="@+id/marriage_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/marriage"
        app:layout_constraintTop_toBottomOf="@+id/residence"
        app:layout_constraintLeft_toLeftOf="@+id/guideline" />
    <TextView
        android:id="@+id/marriage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Spouse"
        style="@style/EntryText"
        app:layout_constraintTop_toBottomOf="@+id/marriage_title"
        app:layout_constraintLeft_toLeftOf="@+id/guideline" />
    <TextView
        android:id="@+id/house_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/house"
        app:layout_constraintTop_toBottomOf="@+id/marriage"
        app:layout_constraintLeft_toLeftOf="@+id/guideline" />
    <TextView
        android:id="@+id/house"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="House"
        style="@style/EntryText"
        app:layout_constraintTop_toBottomOf="@+id/house_title"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"/>
    <TextView
        android:id="@+id/guild_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guild"
        app:layout_constraintTop_toBottomOf="@+id/house"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"/>
    <TextView
        android:id="@+id/guild"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Rank of the Guild"
        style="@style/EntryText"
        app:layout_constraintTop_toBottomOf="@+id/guild_title"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"/>
    <TextView
        android:id="@+id/former_names_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/former_names"
        app:layout_constraintTop_toBottomOf="@+id/guild"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"/>
    <TextView
        android:id="@+id/former_names"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Former name, Former name"
        style="@style/EntryText"
        app:layout_constraintTop_toBottomOf="@+id/former_names_title"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"/>
    <TextView
        android:id="@+id/former_world_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/former_world"
        app:layout_constraintTop_toBottomOf="@+id/former_names"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"/>
    <TextView
        android:id="@+id/former_world"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Former world"
        style="@style/EntryText"
        app:layout_constraintTop_toBottomOf="@+id/former_world_title"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"/>
    <TextView
        android:id="@+id/last_login_title"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/last_login"
        app:layout_constraintTop_toBottomOf="@+id/former_world"
        app:layout_constraintLeft_toLeftOf="@+id/guideline" />
    <TextView
        android:id="@+id/last_login"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        tools:text="Sep 09 2015 13:37 PST"
        style="@style/EntryText"
        app:layout_constraintTop_toBottomOf="@+id/last_login_title"
        app:layout_constraintLeft_toLeftOf="@+id/guideline" />
</android.support.constraint.ConstraintLayout>