<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_margin"
    android:orientation="vertical"
    tools:context=".CharacterFragment">
    <!-- Search player box -->
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/cardview_margin"
        android:layout_marginBottom="@dimen/cardview_margin">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/cardview_padding">
            <EditText
                android:id="@+id/field_search"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/search_hint_player"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:maxLines="1"
                android:gravity="center_vertical"/>
            <Button
                android:id="@+id/button_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/RaisedButton"
                android:text="@string/search" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:animateLayoutChanges="true">
            <!-- Loading progress bar box -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/container_loading"
                android:visibility="gone"
                tools:visibility="visible">
                <ProgressBar
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>
            <!-- Player doesn't exists box -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/container_no_results"
                android:visibility="gone"
                tools:visibility="visible">
                <TextView
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_results_char"/>
            </RelativeLayout>
            <!-- Player info box -->
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/container_character"
                android:layout_marginTop="@dimen/cardview_margin"
                android:layout_marginBottom="@dimen/cardview_margin"
                android:visibility="gone"
                tools:visibility="visible">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/cardview_padding">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:id="@+id/warning"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:src="@drawable/ic_warning"
                            android:tint="@color/red"
                            android:visibility="gone"
                            tools:visibility="visible"
                            android:contentDescription="@string/warning"/>
                        <TextView
                            android:id="@+id/name"
                            android:layout_height="match_parent"
                            android:layout_width="wrap_content"
                            android:gravity="center_vertical"
                            android:layout_weight="10"
                            tools:text="Name"
                            style="@style/BigTitleText"/>
                        <ImageView
                            android:id="@+id/gender"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:src="@drawable/ic_male"
                            android:contentDescription="@string/male" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/summary"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="100"
                            style="@style/EntryText"
                            tools:text="Level 123 Vocation"/>
                        <TextView
                            android:id="@+id/achievements"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="20"
                            style="@style/EntryText"/>
                        <ImageView
                            android:layout_width="18sp"
                            android:layout_height="18sp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_achievements"
                            android:contentDescription="@string/achievements" />
                    </LinearLayout>
                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/residence"
                        style="@style/TitleText"/>
                    <TextView
                        android:id="@+id/residence"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        tools:text="City in World"
                        style="@style/EntryText"/>
                    <LinearLayout
                        android:id="@+id/container_house"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:text="@string/house"/>
                        <TextView
                            android:id="@+id/house"
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            tools:text="House"
                            style="@style/EntryText"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/container_guild"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:text="@string/guild"
                            style="@style/TitleText"/>
                        <TextView
                            android:id="@+id/guild"
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            tools:text="Rank of the Guild"
                            style="@style/EntryText"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/container_former_names"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:text="@string/former_names"/>
                        <TextView
                            android:id="@+id/former_names"
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            tools:text="Former name, Former name 2, ..."
                            style="@style/EntryText"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/container_former_world"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:text="@string/former_world"/>
                        <TextView
                            android:id="@+id/former_world"
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            tools:text="Former World"
                            style="@style/EntryText"/>
                    </LinearLayout>
                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/last_login"/>
                    <TextView
                        android:id="@+id/last_login"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        tools:text="Sep 09 2015 13:37 PST"
                        style="@style/EntryText"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/container_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/cardview_margin"
                android:layout_marginBottom="@dimen/cardview_margin"
                android:visibility="gone"
                tools:visibility="visible">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:animateLayoutChanges="true"
                    android:padding="@dimen/cardview_padding">
                    <TextView
                        android:id="@+id/header_comment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/comment"
                        style="@style/TitleText"
                        android:drawableEnd="@drawable/ic_arrow_drop_down"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/comment"
                        android:visibility="gone"
                        style="@style/EntryText"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/container_deaths"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/cardview_margin"
                android:layout_marginBottom="@dimen/cardview_margin"
                android:visibility="gone"
                tools:visibility="visible">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/cardview_padding"
                    android:orientation="vertical"
                    android:animateLayoutChanges="true">
                    <TextView
                        android:id="@+id/header_deaths"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/deaths"
                        style="@style/TitleText"
                        android:drawableEnd="@drawable/ic_arrow_drop_down"/>
                    <LinearLayout
                        android:id="@+id/deaths"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone">
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/container_chars"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/cardview_margin"
                android:layout_marginBottom="@dimen/cardview_margin"
                android:visibility="gone"
                tools:visibility="visible">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/cardview_padding"
                    android:orientation="vertical"
                    android:animateLayoutChanges="true">
                    <TextView
                        android:id="@+id/header_chars"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/other_chars"
                        style="@style/TitleText"
                        android:drawableEnd="@drawable/ic_arrow_drop_down"/>
                    <LinearLayout
                        android:id="@+id/other_chars"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="4dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone">
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
