<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_margin"
    android:orientation="vertical"
    tools:context=".GuildFragment"
    android:animateLayoutChanges="true">
    <!-- Search guild box -->
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/cardview_margin"
        android:layout_marginBottom="@dimen/cardview_margin">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/cardview_padding">
            <EditText
                android:id="@+id/search_guild"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/search_hint_guild"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:maxLines="1" />
            <Button
                android:id="@+id/search_button"
                android:elevation="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:theme="@style/RaisedButton"
                android:text="@string/search" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <!-- Loading progress bar box -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/loading_box"
        android:visibility="gone">
        <ProgressBar
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <!-- Guild doesn't exists box -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/no_results_box"
        android:visibility="gone">
        <TextView
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_results_guild"/>
    </RelativeLayout>
    <!-- Guild info box -->
    <LinearLayout
        android:id="@+id/guild_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cardview_margin"
            android:layout_marginBottom="@dimen/cardview_margin">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/cardview_margin">
                <TextView
                    android:id="@+id/guild_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/BigTitleText"
                    android:gravity="center_horizontal"
                    tools:text="Guild Name"/>
                <TextView
                    android:id="@+id/guild_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/guild_name"
                    tools:text="@string/guild_info"/>
                <TextView
                    android:id="@+id/guild_members"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/guild_info"
                    tools:text="The guild has 100 members."/>
                <TextView
                    android:id="@+id/guild_members_online"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/guild_members"
                    tools:text="There are 10 members online."/>
                <pl.droidsonroids.gif.GifImageView
                    android:id="@+id/guild_logo"
                    android:contentDescription="@string/guild_logo"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>
        </android.support.v7.widget.CardView>
        <ListView
            android:id="@+id/member_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@android:color/transparent"
            android:dividerHeight="2dp"
            android:fastScrollEnabled="true"
            android:drawSelectorOnTop="true"
            tools:listitem="@layout/row_member"/>
    </LinearLayout>
</LinearLayout>